src/objects/PpiResult__c.object
<CustomObject>
    <description>Stores the results of a PPI survey. This is a snapshot in time so the demographic data in here may not actually reflect the current state but rather reflects the state at the time the survey was conducted.
Lookups to custom objects can be added to allow for reporting against custom data gathered alongside the PPI. Individual fields can also be added to allow for the same</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age of the client at the time they took the PPI Survey</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnswerOne__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the first PPI question</description>
        <label>Answer One</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results Answer One</relationshipLabel>
        <relationshipName>PpiResultsOne</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerTwo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the second PPI question</description>
        <label>Answer Two</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Two)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Two</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerThree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the third PPI question</description>
        <label>Answer Three</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Three)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Three</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerFour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the fourth PPI question</description>
        <label>Answer Four</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Four)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Four</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerFive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the fifth PPI question</description>
        <label>Answer Five</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Five)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Five</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerSix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the sixth PPI question</description>
        <label>Answer Six</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Six)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Six</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerSeven__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the seventh PPI question</description>
        <label>Answer Seven</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Seven)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Seven</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerEight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the eighth PPI question</description>
        <label>Answer Eight</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Eight)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Eight</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerNine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the ninth PPI question</description>
        <label>Answer Nine</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Nine)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Nine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnswerTen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The option that was chosen as the answer to the tenth PPI question</description>
        <label>Answer Ten</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>PPI Results (Answer Ten)</relationshipLabel>
        <relationshipName>PPI_Results_Answer_Ten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>The Id of the client that took the PPI Survey</description>
        <externalId>true</externalId>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>The gender of the client that took the PPI Survey</description>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>The gps location of the client at the time they took the PPI Survey</description>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>HouseholdSize__c</fullName>
        <description>The size of the client's household at the time they took the PPI Survey</description>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JoinedDate__c</fullName>
        <description>The date the client joined the organisation that is carrying out the PPI Survey</description>
        <label>Joined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PpiCollectionDate__c</fullName>
        <label>PPI Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact record of the User who carried out the PPI Survey</description>
        <label>Surveyor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveyor</relationshipLabel>
        <relationshipName>Surveyor</relationshipName>
        <type>Lookup</type>
    </fields>
        <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PpiScore__c</fullName>
        <description>The total PPI Score for this submission. Should only count towards any Reports if the PPI is valid</description>
        <formula>AnswerOne__r.PPIScore__c + AnswerTwo__r.PPIScore__c + AnswerThree__r.PPIScore__c + AnswerFour__r.PPIScore__c + AnswerFive__r.PPIScore__c + AnswerSix__r.PPIScore__c + AnswerSeven__r.PPIScore__c + AnswerEight__r.PPIScore__c + AnswerNine__r.PPIScore__c + AnswerTen__r.PPIScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PpiTemplate__c</fullName>
        <description>The PPI Template that the Submission was for</description>
        <label>PPI Template</label>
        <referenceTo>SurveyVersion__c</referenceTo>
        <relationshipLabel>PPI Template</relationshipLabel>
        <relationshipName>PPI_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsValidPpi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if all the PPI questions were answered. True is they were. False if one or more of the PPI questions were skipped</description>
        <label>Is Valid PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetrievedByParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this record has been successfully sent back to the Parent Org</description>
        <label>Retrieved By Parent</label>
        <type>Checkbox</type>
    </fields>
    <label>PPI Result</label>
    <nameField>
        <displayFormat>PPIR-{0000000000}</displayFormat>
        <label>PPI Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>